$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-35 (opened September 5, 2013)

	* MDSrotate: can now rotate a solution to more than one vector,
	provided that the number of dimensions is higher than the number
	of vectors. Because fitted vectors usually are correlated, only
	the first vector is aligned to dimension 1, but second vector and
	further are oblique to the corresponding axis. In any case they
	will have zero correlation to all subsequent dimensions.

	* simulate.rda, simulate.cca: gained argument 'correlated' for
	using covariances of species in generating correlated multivariate
	normal residuals in parametric simulations. The covariances are
	estimated from the residual ordination of species. The argument
	defaults FALSE which implements the old parametric simulation
	where each species is simulated independently.  The argument has
	no effect in capscale() which stores no information on species.
	
Version 2.1-34 (closed September 5, 2013)

	* DESCRIPTION: dependent on R >= 2.14.0.
	
	* DESCRIPTION, vignettes: R 3.0.2-to-be checks with --as-cran
	requires (with a NOTE) the vignettes source files (Rnw) to be in
	vignettes/ directory.  Because Makefile is not executed in
	inst/doc if vignettes/ directory is present, all other sources had
	to be moved to vignettes/ as well with vignettes/.install_extras
	to move those to inst/doc after building. This also made
	/.Rinstignore unnecessary. The vignettes directory was introduced
	and made recommended in R 2.14.0 so that the this version of vegan
	depends on R >= 2.14.0. 

	* tweaks for R < 2.12.1 removed: code to fix buggy naming of
	columns in qr.X before 2.12.1 (as.mlm.cca/rda, intersetcor), and
	change in the cmdscale() output (eigenvals.default).

	* tweak for R < 2.13.0 removed: change in cmdscale() output
	(capscale).

	* vegandocs: does not use unexported tools:::httpdPort. Now only
	remaining ':::' case is querying default cluster in the
	environment parallel:::.reg.
	